--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
       "express": "^4.17.1",
       "http-errors": "^1.8.0",
       "morgan": "^1.10.0",
-      "mysql": "^2.14.1",
+      "mysql2": "^2.2.5",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.32",
       "winston": "^3.3.3",
