--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,13 @@
 {
-   "extends": "../tsconfig.json",
-   "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-       ],
-       "baseUrl": "./",
-       "outDir": "./build",
-       "emitDecoratorMetadata": true,
-       "experimentalDecorators": true,
-       "strictPropertyInitialization": false
-   },
-   "exclude": ["node_modules"],
-   "include": ["./src/**/*"]
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "lib": ["es5", "es6"],
+    "baseUrl": "./",
+    "outDir": "./build",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
+  },
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*"]
 }
