--- a/server/package.json
+++ b/server/package.json
@@ -1,47 +1,70 @@
 {
-   "name": "server",
-   "version": "1.0.0",
-   "main": "app.ts",
-   "license": "MIT",
-   "devDependencies": {
-      "@types/bcrypt": "^3.0.1",
-      "@types/cookie-parser": "^1.4.2",
-      "@types/cors": "^2.8.10",
-      "@types/dotenv": "^8.2.0",
-      "@types/express": "^4.17.11",
-      "@types/express-session": "^1.17.3",
-      "@types/http-errors": "^1.8.0",
-      "@types/morgan": "^1.9.2",
-      "@types/node": "^8.0.29",
-      "@types/passport": "^1.0.6",
-      "@types/passport-kakao": "^0.2.0",
-      "@types/passport-local": "^1.0.33",
-      "@types/winston": "^2.4.4",
-      "jest": "^26.6.3",
-      "nodemon": "^2.0.7",
-      "ts-node": "3.3.0",
-      "typescript": "^4.1.2"
-   },
-   "dependencies": {
-      "bcrypt": "^5.0.1",
-      "class-validator": "^0.13.1",
-      "cookie-parser": "^1.4.5",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.17.1",
-      "express-session": "^1.17.1",
-      "http-errors": "^1.8.0",
-      "morgan": "^1.10.0",
-      "mysql2": "^2.2.5",
-      "passport": "^0.4.1",
-      "passport-kakao": "^1.0.1",
-      "passport-local": "^1.0.0",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.32",
-      "winston": "^3.3.3",
-      "winston-daily-rotate-file": "^4.5.2"
-   },
-   "scripts": {
-      "start": "nodemon --exec ts-node src/app.ts"
-   }
+  "name": "server",
+  "version": "1.0.0",
+  "main": "app.ts",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/http-errors": "^1.8.0",
+    "@types/jest": "^26.0.22",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^8.0.29",
+    "@types/passport": "^1.0.6",
+    "@types/passport-kakao": "^0.2.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/supertest": "^2.0.11",
+    "@types/winston": "^2.4.4",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
+    "ts-node": "3.3.0",
+    "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.32",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.2"
+  },
+  "scripts": {
+    "start": "nodemon --exec ts-node src/app.ts",
+    "test": "cross-env NODE_ENV=test && jest --detectOpenHandles --forceExit"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "\\.test\\.ts$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": true
+      }
+    }
+  }
 }
