--- a/server/.env.sample
+++ b/server/.env.sample
@@ -4,6 +4,12 @@ DB_USERNAME=test
 DB_PASSWORD=test
 DB_DATABASE=test
 DB_HOST=localhost
-COOKIE_SECRET
-CLIENT_PRODUCTION
-CLIENT_DEVELOPMENT
+COOKIE_SECRET=
+CLIENT_URL_PRODUCTION=
+CLIENT_URL_DEVELOPMENT=
+SERVER_URL_PRODUCTION=
+SERVER_URL_DEVELOPMENT=
+KAKAO_CLIENT_ID=
+KAKAO_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
