--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^8.0.29",
     "@types/passport": "^1.0.6",
+    "@types/passport-github": "^1.1.5",
     "@types/passport-kakao": "^0.2.0",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.11",
@@ -39,6 +40,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.10",
