--- a/server/.env.sample
+++ b/server/.env.sample
@@ -6,9 +6,9 @@ DB_DATABASE=test
 DB_HOST=localhost
 COOKIE_SECRET=
 CLIENT_URL_PRODUCTION=
-CLIENT_URL_DEVELOPMENT=
+CLIENT_URL_DEVELOPMENT=http://localhost:3000
 SERVER_URL_PRODUCTION=
-SERVER_URL_DEVELOPMENT=
+SERVER_URL_DEVELOPMENT=http://localhost:8000
 KAKAO_CLIENT_ID=
 KAKAO_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
