--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,21 +1,13 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "baseUrl": "./",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl": "src",
     "module": "esnext",
     "jsx": "react-jsx",
     "noFallthroughCasesInSwitch": true,
     "isolatedModules": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
