feat: 개발 DB : Sqlite3 연결하기 (#29)

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,8 +1,9 @@
 PORT=8000
 NODE_ENV=development
+DB_TYPE=sqlite
 DB_USERNAME=test
 DB_PASSWORD=test
-DB_DATABASE=test
+DB_DATABASE=db.sqlite
 DB_HOST=localhost
 COOKIE_SECRET=
 CLIENT_URL_PRODUCTION=
