--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/winston": "^2.4.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
     "ts-node": "3.3.0",
@@ -49,7 +50,9 @@
     "winston-daily-rotate-file": "^4.5.2"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts",
+    "build": "tsc",
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/app.ts",
+    "start:prod": "yarn build && cross-env NODE_ENV=production ts-node build/app.js",
     "test": "cross-env NODE_ENV=test && jest --detectOpenHandles --forceExit"
   },
   "jest": {
