--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,11 +3,12 @@
   "compilerOptions": {
     "lib": ["es5", "es6"],
     "baseUrl": "./",
-    "outDir": "./build",
+    "outDir": "build",
+    "noEmit": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false
   },
-  "exclude": ["node_modules"],
-  "include": ["./src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
