feat: Swagger API document 추가 (#33)

--- a/server/src/utils/swagger/paths/v1/auth/auth-id.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/auth-id.yaml
@@ -5,7 +5,7 @@ get:
   parameters:
     - in: path
       name: id
-      description: user id
+      description: 조회할 유저 ID
       type: integer
   responses:
     200:
@@ -17,25 +17,34 @@ get:
             properties:
               status:
                 type: number
+                example: 200
               message:
                 type: string
+                example: 회원 조회 성공
               data:
                 type: object
+                schema:
+                  $ref: "../../../swagger.yaml#/components/schemas/User"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
     500:
       $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
     600:
       $ref: "../../../swagger.yaml#/components/responses/DBError"
-put:
+patch:
   summary: "유저 정보 수정"
   tags:
     - Auth
   parameters:
     - in: path
       name: id
-      description: user id
+      description: 수정할 유저 ID
       type: integer
+  requestBody:
+    content:
+      application/json:
+        schema:
+          $ref: "../../../swagger.yaml#/components/schemas/User"
   responses:
     200:
       description: OK
@@ -46,16 +55,16 @@ put:
             properties:
               status:
                 type: number
+                example: 200
               message:
                 type: string
+                example: 회원 수정 성공
               data:
                 type: object
+                schema:
+                  $ref: "../../../swagger.yaml#/components/schemas/User"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-    500:
-      $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
-    600:
-      $ref: "../../../swagger.yaml#/components/responses/DBError"
 delete:
   summary: "유저 회원 탈퇴"
   tags:
@@ -63,7 +72,7 @@ delete:
   parameters:
     - in: path
       name: id
-      description: user id
+      description: 삭제할 유저 ID
       type: integer
   responses:
     200:
@@ -75,13 +84,10 @@ delete:
             properties:
               status:
                 type: number
+                example: 200
               message:
                 type: string
-              data:
-                type: object
+                example: 회원탈퇴 성공
+
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-    500:
-      $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
-    600:
-      $ref: "../../../swagger.yaml#/components/responses/DBError"
