--- a/server/src/utils/swagger/paths/v1/auth/auth-signup.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/auth-signup.yaml
@@ -2,6 +2,11 @@ post:
   summary: "유저 회원가입"
   tags:
     - Auth
+  requestBody:
+    content:
+      application/json:
+        schema:
+          $ref: "../../../swagger.yaml#/components/schemas/User"
   responses:
     201:
       description: CREATED
@@ -12,13 +17,13 @@ post:
             properties:
               status:
                 type: number
+                example: 201
               message:
                 type: string
+                example: 회원가입 성공
               data:
                 type: object
+                schema:
+                  $ref: "../../../swagger.yaml#/components/schemas/User"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-    500:
-      $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
-    600:
-      $ref: "../../../swagger.yaml#/components/responses/DBError"
