--- a/server/src/utils/swagger/paths/v1/auth/auth-logout.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/auth-logout.yaml
@@ -1,10 +1,10 @@
-post:
+get:
   summary: "유저 로그아웃"
   tags:
     - Auth
   responses:
-    201:
-      description: CREATED
+    200:
+      description: OK
       content:
         application/json:
           schema:
@@ -12,13 +12,9 @@ post:
             properties:
               status:
                 type: number
+                example: 200
               message:
                 type: string
-              data:
-                type: object
+                example: 로그아웃 성공
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-    500:
-      $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
-    600:
-      $ref: "../../../swagger.yaml#/components/responses/DBError"
