--- a/server/src/utils/swagger/paths/v1/auth/auth.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/auth.yaml
@@ -12,13 +12,14 @@ get:
             properties:
               status:
                 type: number
+                example: 200
               message:
                 type: string
+                example: 회원 목록 조회 성공
               data:
-                type: object
+                type: array
+                items:
+                  schema:
+                    $ref: "../../../swagger.yaml#/components/schemas/User"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-    500:
-      $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
-    600:
-      $ref: "../../../swagger.yaml#/components/responses/DBError"
