--- a/server/src/utils/swagger/paths/v1/auth/oauth-kakao.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/oauth-kakao.yaml
@@ -12,11 +12,9 @@ get:
             properties:
               status:
                 type: number
+                example: 200
               message:
                 type: string
+                example: 로그인 성공
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-    500:
-      $ref: "../../../swagger.yaml#/components/responses/InternalServerError"
-    600:
-      $ref: "../../../swagger.yaml#/components/responses/DBError"
