--- a/server/src/utils/swagger/paths/v1/auth/auth.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/auth.yaml
@@ -23,3 +23,32 @@ get:
                     $ref: "../../../swagger.yaml#/components/schemas/User"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
+post:
+  summary: "로컬 로그인"
+  tags:
+    - Auth
+  requestBody:
+    content:
+      application/json:
+        schema:
+          $ref: "../../../swagger.yaml#/components/schemas/User"
+  responses:
+    200:
+      description: OK
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                type: number
+                example: 200
+              message:
+                type: string
+                example: 로그인 성공
+              data:
+                type: object
+                schema:
+                  $ref: "../../../swagger.yaml#/components/schemas/User"
+    400:
+      $ref: "../../../swagger.yaml#/components/responses/BadRequest"
