--- a/server/package.json
+++ b/server/package.json
@@ -3,32 +3,6 @@
   "version": "1.0.0",
   "main": "app.ts",
   "license": "MIT",
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.1",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
-    "@types/express-session": "^1.17.3",
-    "@types/http-errors": "^1.8.0",
-    "@types/jest": "^26.0.22",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^8.0.29",
-    "@types/passport": "^1.0.6",
-    "@types/passport-github": "^1.1.5",
-    "@types/passport-kakao": "^0.2.0",
-    "@types/passport-local": "^1.0.33",
-    "@types/supertest": "^2.0.11",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/winston": "^2.4.4",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "sqlite3": "^5.0.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.5",
-    "ts-node": "3.3.0",
-    "typescript": "^4.1.2"
-  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
@@ -51,7 +25,35 @@
     "swagger-ui-express": "^4.1.6",
     "typeorm": "0.2.32",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.2"
+    "winston-daily-rotate-file": "^4.5.2",
+    "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/http-errors": "^1.8.0",
+    "@types/jest": "^26.0.22",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^8.0.29",
+    "@types/passport": "^1.0.6",
+    "@types/passport-github": "^1.1.5",
+    "@types/passport-kakao": "^0.2.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/winston": "^2.4.4",
+    "@types/yamljs": "^0.2.31",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
+    "ts-node": "3.3.0",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "prebuild": "tsc -b --clean",
