chore: Set module alias service directory (#53)

--- a/server/package.json
+++ b/server/package.json
@@ -68,6 +68,7 @@
     "@middlewares": "build/middlewares",
     "@models": "build/models",
     "@routes": "build/routes",
+    "@services": "build/services",
     "@utils": "build/utils"
   },
   "jest": {
