feat: Post API Swagger & docs (#74)

--- a/server/src/utils/swagger/paths/v1/auth/auth-logout.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/auth-logout.yaml
@@ -16,5 +16,8 @@ get:
               message:
                 type: string
                 example: 로그아웃 성공
+              success:
+                type: boolean
+                example: true
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
