--- a/server/src/utils/swagger/paths/v1/auth/oauth-kakao.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/oauth-kakao.yaml
@@ -16,5 +16,8 @@ get:
               message:
                 type: string
                 example: 로그인 성공
+              success:
+                type: boolean
+                example: true
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
