--- a/server/src/utils/swagger/paths/v1/post/post.yaml
+++ b/server/src/utils/swagger/paths/v1/post/post.yaml
@@ -1,7 +1,20 @@
 get:
-  summary: "유저 정보 리스트 조회"
+  summary: "글 목록 조회"
   tags:
-    - Auth
+    - Post
+  parameters:
+    - in: query
+      name: filter
+      description: filter (week, latest, like, view)
+      type: string
+    - in: query
+      name: page
+      description: page number
+      type: number
+    - in: query
+      name: limit
+      description: 페이지 당 출력할 글의 개수
+      type: number
   responses:
     200:
       description: OK
@@ -15,7 +28,7 @@ get:
                 example: 200
               message:
                 type: string
-                example: 회원 목록 조회 성공
+                example: 글 목록 조회 성공
               success:
                 type: boolean
                 example: true
@@ -23,18 +36,18 @@ get:
                 type: array
                 items:
                   schema:
-                    $ref: "../../../swagger.yaml#/components/schemas/User"
+                    $ref: "../../../swagger.yaml#/components/schemas/Post"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
 post:
-  summary: "로컬 로그인"
+  summary: "글 생성하기"
   tags:
-    - Auth
+    - Post
   requestBody:
     content:
       application/json:
         schema:
-          $ref: "../../../swagger.yaml#/components/schemas/User"
+          $ref: "../../../swagger.yaml#/components/schemas/Post"
   responses:
     200:
       description: OK
@@ -48,13 +61,13 @@ post:
                 example: 200
               message:
                 type: string
-                example: 로그인 성공
+                example: 글 생성 성공
               success:
                 type: boolean
                 example: true
               data:
                 type: object
                 schema:
-                  $ref: "../../../swagger.yaml#/components/schemas/User"
+                  $ref: "../../../swagger.yaml#/components/schemas/Post"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
