--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
@@ -37,6 +38,7 @@
     "@types/express-session": "^1.17.3",
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "@types/node": "^8.0.29",
     "@types/passport": "^1.0.6",
