feat: Add JWT to Authentication and Authorization (#77)

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -7,6 +7,7 @@ DB_DATABASE=db.sqlite
 DB_HOST=localhost
 DB_MIGRTATE=false
 COOKIE_SECRET=
+JWT_SECRET_KEY=
 CLIENT_URL_PRODUCTION=
 CLIENT_URL_DEVELOPMENT=http://localhost:3000
 SERVER_URL_PRODUCTION=
