--- a/server/src/utils/swagger/paths/v1/auth/oauth-github.yaml
+++ b/server/src/utils/swagger/paths/v1/auth/oauth-github.yaml
@@ -10,14 +10,14 @@ get:
           schema:
             type: object
             properties:
-              status:
-                type: number
-                example: 200
-              message:
-                type: string
-                example: 로그인 성공
               success:
                 type: boolean
                 example: true
+              message:
+                type: string
+                example: 로그인 성공
+              data:
+                type: string
+                example: haWwiOiJhZG1pbjJAZ2...Token
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
