--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
@@ -40,6 +41,7 @@
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
     "@types/passport": "^1.0.6",
     "@types/passport-github": "^1.1.5",
