--- a/server/src/utils/swagger/paths/v1/post/post-view.yaml
+++ b/server/src/utils/swagger/paths/v1/post/post-view.yaml
@@ -1,7 +1,7 @@
 get:
   security:
     - bearerAuth: []
-  summary: "글 목록 조회"
+  summary: "글 목록 조회 (View)"
   tags:
     - Post
   parameters:
@@ -32,36 +32,5 @@ get:
                 items:
                   schema:
                     $ref: "../../../swagger.yaml#/components/schemas/Post"
-    400:
-      $ref: "../../../swagger.yaml#/components/responses/BadRequest"
-post:
-  security:
-    - bearerAuth: []
-  summary: "글 생성하기"
-  tags:
-    - Post
-  requestBody:
-    content:
-      application/json:
-        schema:
-          $ref: "../../../swagger.yaml#/components/schemas/Post"
-  responses:
-    200:
-      description: OK
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              success:
-                type: boolean
-                example: true
-              message:
-                type: string
-                example: 글 생성 성공
-              data:
-                type: object
-                schema:
-                  $ref: "../../../swagger.yaml#/components/schemas/Post"
     400:
       $ref: "../../../swagger.yaml#/components/responses/BadRequest"
