--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/module-alias": "^2.0.0",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/node": "^8.0.29",
